--- a/Libarys/grues_libary/grues_libary.cbp
+++ b/Libarys/grues_libary/grues_libary.cbp
@@ -2,12 +2,12 @@
 <CodeBlocks_project_file>
 	<FileVersion major="1" minor="6" />
 	<Project>
-		<Option title="readcsv" />
+		<Option title="grues_libary" />
 		<Option pch_mode="2" />
 		<Option compiler="gcc" />
 		<Build>
 			<Target title="Debug">
-				<Option output="bin/Debug/readcsv" prefix_auto="1" extension_auto="1" />
+				<Option output="bin/Debug/grues_libary" prefix_auto="1" extension_auto="1" />
 				<Option working_dir="" />
 				<Option object_output="obj/Debug/" />
 				<Option type="2" />
@@ -19,7 +19,7 @@
 				</Compiler>
 			</Target>
 			<Target title="Release">
-				<Option output="bin/Release/readcsv" prefix_auto="1" extension_auto="1" />
+				<Option output="bin/Release/grues_libary" prefix_auto="1" extension_auto="1" />
 				<Option working_dir="" />
 				<Option object_output="obj/Release/" />
 				<Option type="2" />
